--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ REACT_APP_APP_ID=1:342976609920:web:237ea4d80ee4a82861f065
 REACT_APP_MEASUREMENT_ID=G-E6Q8HZHLK9
 
 
-REACT_APP_GENERATE_PROXY_URL=http://3.111.125.9:8725/generate_proxy
-REACT_APP_REGENERATE_PROXY_URL=http://3.111.125.9:8725/regenerate_proxy
+REACT_APP_GENERATE_PROXY_URL=https://backend.speedbuy.xyz/generate_proxy
+REACT_APP_REGENERATE_PROXY_URL=https://backend.speedbuy.xyz/regenerate_proxy
